# agenticRAG

./: .env.example  .gitignore  AGENT_PROMPT.md  Makefile  README.md  docker-compose.yml  lessions.md  pdf2db_todo.md  pyproject.toml  pytest.ini
.githooks/: pre-commit
agent_logs/: 20260207-200321.md  20260207_132552.md  20260207_135332.md  20260207_153047.md  20260207_154013.md  20260207_175328.md  20260207_180513.txt  20260207_202447.txt  20260208_142132.md  20260209_115814.md  20260210_110606.md  20260210_112423.md  20260210_114436.md  20260210_122307.md  20260210_142531.md  20260211_152417.md  20260212_103154.md  20260213_120500.md  20260214_193000.md  20260215_210000.md  20260216_223500.md
app/: config.py  main.py
current_tasks/: agui_streaming_bugfix.txt  fix_citation.txt  improve_pdf2db.txt  improve_retrieval.txt  reduce_latency.txt
data/: financial_dictionary.json
embedding_service/: main.py
frontend/: .env.local  package-lock.json  package.json  tsconfig.tsbuildinfo
migrations/: env.py
scripts/: analyze_engine_gap.py  apply_manual_facts.py  cleanup_dictionary_short_labels.py  eval_metric_match_cases.py  eval_pdf2db.py  eval_pdf2db_gt.py  extract_cas2020_background_rules.py  extract_cas_toc_from_doc.py  import_xbrl_taxonomy.py  ingest_financial_report.py  ingest_multi_engine.py  install_git_hooks.sh  merge_cas2020_toc_dictionary.py  merge_taxonomy_dictionary.py  prune_cas2020_generated_metrics.py  resolve_fact_candidates.py  run_lint.sh  run_tests.sh  sync_metric_dictionary.py  test_qa.py
tests/: README.md  quality_metrics.yaml  (+23 more)
ui/: app.js  (+1 more)
(+60 files in other folders)
